crates/playwright-rs-macros/tests/ui/empty.stderr
error: selector is empty or whitespace-only
 --> tests/ui/empty.rs:4:22
  |
4 |     let _ = locator!("");
  |                      ^^
